kubernetes/apollo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "apollo"
  namespace: "kpatel20538"
  labels:
    app.kubernetes.io/instance: "apollo-pubsub-demo"
    app.kubernetes.io/component: "apollo"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: "apollo-pubsub-demo"
      app.kubernetes.io/component: "apollo"
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: "apollo-pubsub-demo"
        app.kubernetes.io/component: "apollo"
    spec:
      containers:
        - name: "apollo"
          image: "kpatel20538/apollo-pubsub-demo:apollo"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: "apollo"
  namespace: "kpatel20538"
  labels:
    app.kubernetes.io/instance: "apollo-pubsub-demo"
    app.kubernetes.io/component: "apollo"
  annotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  type: LoadBalancer
  ports:
    - name: "web"
      port: 8080
  selector:
    app.kubernetes.io/instance: "apollo-pubsub-demo"
    app.kubernetes.io/component: "apollo"
