kubernetes/next.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "next"
  namespace: "kpatel20538"
  labels:
    app.kubernetes.io/instance: "apollo-pubsub-demo"
    app.kubernetes.io/component: "next"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: "apollo-pubsub-demo"
      app.kubernetes.io/component: "next"
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: "apollo-pubsub-demo"
        app.kubernetes.io/component: "next"
    spec:
      containers:
        - name: "next"
          image: "kpatel20538/apollo-pubsub-demo:next"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: "next"
  namespace: "kpatel20538"
  labels:
    app.kubernetes.io/instance: "apollo-pubsub-demo"
    app.kubernetes.io/component: "next"
spec:
  ports:
    - name: "web"
      port: 8080
  selector:
    app.kubernetes.io/instance: "apollo-pubsub-demo"
    app.kubernetes.io/component: "next"
