kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    dev.okteto.com/generate-host: "demo"
spec:
  rules:
    - http:
        paths:
          - path: "/graphql"
            backend:  
              serviceName: "apollo"
              servicePort: 8080
          - path: "/"
            backend:  
              serviceName: "next"
              servicePort: 8080
